test/chainsaw/authpolicy/validation/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: path-validation
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: paths/authpolicy-mixing-path-syntax.yaml
        - assert:
            file: paths/authpolicy-mixing-path-syntax-assert.yaml
        - create:
            file: paths/authpolicy-new-path-syntax-invalid.yaml
        - assert:
            file: paths/authpolicy-new-path-syntax-invalid-assert.yaml
        - create:
            file: paths/authpolicy-new-path-syntax-valid.yaml
        - assert:
            file: paths/authpolicy-new-path-syntax-valid-assert.yaml
        - create:
            file: paths/authpolicy-old-path-syntax-invalid.yaml
        - assert:
            file: paths/authpolicy-old-path-syntax-invalid-assert.yaml
        - create:
            file: paths/authpolicy-old-path-syntax-valid.yaml
        - assert:
            file: paths/authpolicy-old-path-syntax-valid-assert.yaml

    - try:
        - create:
            file: ../../../resources/secret/oauth-secret.yaml
        - create:
            file: ../../../resources/skiperator/application.yaml
        - create:
            file: pod_annotations/authpolicy.yaml
        - assert:
            file: pod_annotations/application-without-pod-annotations-assert.yaml
        - apply:
            file: pod_annotations/application-with-wrong-pod-annotations.yaml
        - assert:
            file: pod_annotations/application-with-wrong-pod-annotations-assert.yaml
        - apply:
            file: ../../../resources/skiperator/application-with-istio-mount.yaml
        - assert:
            file: pod_annotations/application-with-correct-pod-annotations-assert.yaml
